--- a/res/layout/theme_font_option.xml
+++ b/res/layout/theme_font_option.xml
@@ -46,5 +46,9 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/theme_option_label_margin"
         android:gravity="center"
+        android:singleLine="true"
+        android:scrollHorizontally="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
         android:textColor="@color/system_on_surface"/>
 </LinearLayout>
